[project]
name = "sbi-bnn-cosmology"
version = "0.1.0"
description = "BNN for Cosmology"
authors = [
    {name = "axect", email = "ax2ct@outlook.com"},
]
dependencies = [
    "camb>=1.5.0",
    "notebook>=7.0.2",
    "matplotlib>=3.7.2",
    "numpy>=1.25.2",
    "setuptools>=68.0.0",
    "mpi4py>=3.1.4",
    "cobaya>=3.3.2",
    "getdist>=1.4.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

